--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.RandomDuck"
         tools:targetApi="31">
         <activity
-            android:name=".OneDuck.presentation.MainActivity"
+            android:name=".one_duck.presentation.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.RandomDuck">
